Bug 233114 - Fingers down on the trackpad should stop an animated scroll
Summary: Fingers down on the trackpad should stop an animated scroll
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Scrolling (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Fraser (smfr)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2021-11-14 18:01 PST by Simon Fraser (smfr)
Modified: 2021-11-14 20:07 PST (History)
9 users (show)

See Also:


Attachments
Patch (9.78 KB, patch)
2021-11-14 18:04 PST, Simon Fraser (smfr)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2021-11-14 18:01:47 PST
Fingers down on the trackpad should stop an animated scroll
Comment 1 Simon Fraser (smfr) 2021-11-14 18:04:03 PST
Created attachment 444202 [details]
Patch
Comment 2 Wenson Hsieh 2021-11-14 18:44:38 PST
Comment on attachment 444202 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=444202&action=review

> Source/WebCore/platform/mac/ScrollingEffectsController.mm:143
> +        return true;

Is returning `true` correct for the `PlatformWheelEventPhase::Cancelled` case as well?
Comment 3 Simon Fraser (smfr) 2021-11-14 19:23:39 PST
(In reply to Wenson Hsieh from comment #2)
> Comment on attachment 444202 [details]
> Patch
> 
> View in context:
> https://bugs.webkit.org/attachment.cgi?id=444202&action=review
> 
> > Source/WebCore/platform/mac/ScrollingEffectsController.mm:143
> > +        return true;
> 
> Is returning `true` correct for the `PlatformWheelEventPhase::Cancelled`
> case as well?

There's no clear logic behind saying that MayBegin and Cancelled are handled so it's fuzzy.
Comment 4 EWS 2021-11-14 20:06:47 PST
Committed r285797 (244241@main): <https://commits.webkit.org/244241@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 444202 [details].
Comment 5 Radar WebKit Bug Importer 2021-11-14 20:07:22 PST
<rdar://problem/85397363>